# pgbouncer

./: .appveyor.yml  .cirrus.yml  .dockerignore  .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYRIGHT  Dockerfile  LICENSE.txt  Makefile  NEWS  NEWS.md  NEWS.rst  NOTICE.txt  README  README.md  README.rst  RELEASE_NOTES  appveyor.yml  autogen.sh  cfsetup.yaml  circle.yml  config.mak.in  configure.ac  configure~  dev_requirements.txt  docker-compose.yml  entrypoint.sh  flake.nix  go.mod  meson.build  meson_options.txt  pgbouncer-deploy.yaml  pgbouncer-example.ini  pyproject.toml  (+8 more)
.teamcity/: build.sh  debian-package.sh  test.sh
ci/: run.sh
debian/: changelog  control  copyright  packages  rules
dev/: format.sh
doc/: .gitignore  Makefile  concepts.md  config.md  config.rst  config.txt  faq.txt  filter.lua  filter.py  fixman.py  frag-config-man  frag-config-man.md  frag-usage-man  frag-usage-man.md  meson.build  overview.txt  pgbouncer.1  pgbouncer.5  pgbouncer.cmdline.txt  pgbouncer.config.txt  todo.md  todo.rst  todo.txt  usage.md  usage.rst  usage.txt
docker/: Dockerfile  docker-compose.yml
etc/: example.debian.init.sh  import-common.sh  mkauth.py  optscan.sh  pgbouncer-minimal.ini  pgbouncer.ini  pgbouncer.service  pgbouncer.socket  small.ini  test.ini  test.users  userlist.txt
include/: aatree.h  admin.h  bouncer.h  bouncer.h.orig  client.h  dnslookup.h  gss.h  hash.h  hba.h  hostpool.h  iobuf.h  janitor.h  janitor.h.orig  ps.h  (+31 more)
lib/: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  COPYRIGHT  Makefile  README  autogen.sh  build.mk.in  build_msvc.mk  config.mak.in  configure.ac  find_modules.sh
lib/doc/: Doxyfile  mainpage.dox  setup.dox
lib/m4/: antimake.m4  ax_pthread.m4  usual.m4
lib/mk/: Makefile.am  amext-cxx.mk  amext-libusual.mk  amext-modes.mk  amext-msvc.mk  antimake.mk  antimake.txt  gen-pgutil_kwlookup_gp.sh  gen-pgutil_kwlookup_h.sh  libusual.pc.in  safe-headers.sed  std-autogen.sh
lib/mk/temos/: Makefile  index.txt  libtemo.sh
lib/mk/temos/expected/: antimake1.txt  antimake2.txt  antimake3.txt  antimake4.txt  antimake5.txt  antimake6.txt  libusual1.txt  libusual2.txt  libusual3.txt  libusual4.txt  libusual5.txt  libusual6.txt
lib/mk/temos/src/: antimake1.temo  antimake2.temo  antimake3.temo  antimake4.temo  antimake5.temo  antimake6.temo  libusual1.temo  libusual2.temo  libusual3.temo  libusual4.temo  libusual5.temo  libusual6.temo
lib/test/: Makefile  awk_test.sh  compile.c  connect-tls.c  coverage.mk  coverage.sh  force_compat.sed  test_aatree.c  test_base.c  test_bits.c  test_cbtree.c  test_cfparser.c  test_cfparser.ini  test_common.c  test_common.h  test_crypto.c  test_ctype.c  test_cxalloc.c  test_endian.c  test_fileutil.c  test_fnmatch.c  test_getopt.c  test_hashing.c  test_hashtab.c  test_heap.c  test_json.c  test_list.c  test_mdict.c  test_netdb.c  test_pgutil.c  test_psrandom.c  test_regex.c  test_shlist.c  test_slab_ts.c  test_socket.c  test_spinlock.c  test_statlist_ts.c  test_string.c  test_strpool.c  test_talloc.c  (+9 more)
lib/test/attregex/: Makefile  run.sh  testregex.c
lib/test/ssl/: ca1_client1.crt  ca1_client1.crt.sha1  ca1_client1.crt.sha256  ca1_client1.key  ca1_complex1.crt  ca1_complex1.crt.sha1  ca1_complex1.crt.sha256  ca1_complex1.key  ca1_root.crt  ca1_root.crt.sha1  ca1_root.crt.sha256  ca1_root.key  ca1_server1.crt  ca1_server1.crt.sha1  ca1_server1.crt.sha256  ca1_server1.key  ca2_client2.crt  ca2_client2.crt.sha1  ca2_client2.crt.sha256  ca2_client2.key  ca2_complex2.crt  ca2_complex2.crt.sha1  ca2_complex2.crt.sha256  ca2_complex2.key  ca2_root.crt  ca2_root.crt.sha1  ca2_root.crt.sha256  ca2_root.key  ca2_server2.crt  ca2_server2.crt.sha1  ca2_server2.crt.sha256  ca2_server2.key  mkcerts.py
lib/usual/: aatree.c  aatree.h  base.c  base.h  base_win32.h  bits.h  bytemap.h  cbtree.c  cbtree.h  cfparser.c  cfparser.h  config_msvc.h  ctype.h  cxalloc.c  cxalloc.h  cxextra.c  cxextra.h  daemon.c  daemon.h  dlfcn.c  dlfcn.h  endian.h  err.c  err.h  fileutil.c  fileutil.h  fnmatch.c  fnmatch.h  getopt.c  getopt.h  hashtab-impl.h  heap.c  heap.h  json.c  json.h  list.c  list.h  logging.c  logging.h  mbuf.c  (+52 more)
lib/usual/crypto/: chacha.c  chacha.h  csrandom.c  csrandom.h  digest.c  digest.h  entropy.c  entropy.h  hmac.c  hmac.h  keccak.c  keccak.h  keccak_prng.c  keccak_prng.h  md5.c  md5.h  sha1.c  sha1.h  sha256.c  sha256.h  sha3.c  sha3.h  sha512.c  sha512.h
lib/usual/hashing/: crc32.c  crc32.h  lookup3.c  lookup3.h  memhash.c  memhash.h  siphash.c  siphash.h  spooky.c  spooky.h  xxhash.c  xxhash.h
lib/usual/tls/: tls.c  tls.h  tls_cert.c  tls_cert.h  tls_client.c  tls_compat.c  tls_compat.h  tls_config.c  tls_conninfo.c  tls_internal.h  tls_ocsp.c  tls_peer.c  tls_server.c  tls_util.c  tls_verify.c
test/: Makefile  README.md  asynctest.c  conftest.py  connection_tracker.py  conntest.sh  ctest6000.ini  ctest7000.ini  hba_test.c  hba_test.eval  hba_test.rules  map_ident_test.rules  meson.build  pgbouncer_hba.conf  pgident.conf  run-conntest.sh  setup_system_krb.sh  start_openldap_server.sh  stress.py  test.ini  test.sh  test_admin.py  test_auth.py  test_auth_gss.py  test_cancel.py  test_copy.py  test_example.py  test_host_strategy.py  test_limits.py  test_load_balance_hosts.py  test_load_balance_min_connections.py  test_misc.py  test_no_database.py  test_no_user.py  test_operations.py  test_peering.py  test_pool_balancing.py  test_prepared.py  test_replication.py  test_ssl.py  (+6 more)
test/gss/: Makefile  newkdc.sh  test.ini  test.sh
test/ldap/: ldap.ldif
test/ps/: README.md  run-docker-testdb.sh  test.go  test.ini  userlist.txt
test/qa/github/: test_qa_gh001103__put_in_order.py  test_qa_gh001104.py
test/regression/: fatal_on_reload.bash
test/ssl/: Makefile  create_certs.sh  lib.sh  newca.sh  newsite.sh  test.ini  test.sh
test/ssl/TestCA1/: ca.crt  ca.key  config.ini  index.txt
test/ssl/TestCA1/certs/: 01.pem  03.pem
test/ssl/TestCA1/sites/: 01-localhost.csr  01-localhost.key  02-bouncer.crt  02-bouncer.csr  02-bouncer.key  03-random.csr  03-random.key
(+99 files in other folders)
